# src/api/user/presentation/auth.controller.ts
@@ -33,9 +33,15 @@ export class AuthController {
   /**
    * 로그인 API
    *
-   * 구글 oauth2 인증을 통해 얻은 code를 body를 통해 제공해야 합니다.
+   * 새로운 사용자가 로그인을 진행하면 google oauth 서버에서 제공한 사용자 정보를 토대로
+   * 사용자 계정을 생성합니다.
+   *
+   * 비활성화된 사용자의 경우, 다시 활성화됩니다.
    *
    * @tag authentication
+   * @param body token 요청 권한을 가진 code를 포함한다.
+   * @returns access_token, refresh_token, id_token을 포함한 객체를 응답
+   * @throw 401 사용자 인증에 실패했습니다.
    */
   @UseGuards(GoogleGuard)
   @Post('sign-in/google')
@@ -49,9 +55,15 @@ export class AuthController {
   /**
    * 로그인 API
    *
-   * 깃헙 oauth2 인증을 통해 얻은 code를 body를 통해 제공해야 합니다.
+   * 새로운 사용자가 로그인을 진행하면 github oauth 서버에서 제공한 사용자 정보를 토대로
+   * 사용자 계정을 생성합니다.
+   *
+   * 비활성화된 사용자의 경우, 다시 활성화됩니다.
    *
    * @tag authentication
+   * @param body token 요청 권한을 가진 code를 포함한다.
+   * @returns access_token, refresh_token, id_token을 포함한 객체를 응답
+   * @throw 401 사용자 인증에 실패했습니다.
    */
   @UseGuards(GithubGuard)
   @Post('sign-in/github')
@@ -68,6 +80,9 @@ export class AuthController {
    * Authorization header로 refresh_token을 전달헤야 합니다.
    *
    * @tag authentication
+   * @returns 재발행된 access_token을 응답합니다.
+   * @throw 400 잘못된 토큰입니다.
+   * @throw 404 일치하는 대상을 찾지 못했습니다.
    */
   @Get('token/refresh')
   refreshToken(
