# swagger.json
@@ -17,9 +17,21 @@
           "authentication"
         ],
         "parameters": [],
+        "requestBody": {
+          "description": "token 요청 권한을 가진 code를 포함한다.",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/IAuthUsecase.SignInBody"
+              }
+            }
+          },
+          "required": true,
+          "x-nestia-encrypted": false
+        },
         "responses": {
           "201": {
-            "description": "",
+            "description": "access_token, refresh_token, id_token을 포함한 객체를 응답",
             "content": {
               "application/json": {
                 "schema": {
@@ -28,9 +40,12 @@
               }
             },
             "x-nestia-encrypted": false
+          },
+          "401": {
+            "description": "사용자 인증에 실패했습니다."
           }
         },
-        "description": "로그인 API\n\n구글 oauth2 인증을 통해 얻은 code를 body를 통해 제공해야 합니다.",
+        "description": "로그인 API\n\n새로운 사용자가 로그인을 진행하면 google oauth 서버에서 제공한 사용자 정보를 토대로\n사용자 계정을 생성합니다.\n\n비활성화된 사용자의 경우, 다시 활성화됩니다.",
         "x-nestia-namespace": "sign-in.google.signInGoogle",
         "x-nestia-jsDocTags": [
           {
@@ -38,6 +53,41 @@
             "text": [
               {
                 "text": "authentication",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "param",
+            "text": [
+              {
+                "text": "body",
+                "kind": "parameterName"
+              },
+              {
+                "text": " ",
+                "kind": "space"
+              },
+              {
+                "text": "token 요청 권한을 가진 code를 포함한다.",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "returns",
+            "text": [
+              {
+                "text": "access_token, refresh_token, id_token을 포함한 객체를 응답",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "401 사용자 인증에 실패했습니다.",
                 "kind": "text"
               }
             ]
@@ -51,9 +101,21 @@
           "authentication"
         ],
         "parameters": [],
+        "requestBody": {
+          "description": "token 요청 권한을 가진 code를 포함한다.",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/IAuthUsecase.SignInBody"
+              }
+            }
+          },
+          "required": true,
+          "x-nestia-encrypted": false
+        },
         "responses": {
           "201": {
-            "description": "",
+            "description": "access_token, refresh_token, id_token을 포함한 객체를 응답",
             "content": {
               "application/json": {
                 "schema": {
@@ -62,9 +124,12 @@
               }
             },
             "x-nestia-encrypted": false
+          },
+          "401": {
+            "description": "사용자 인증에 실패했습니다."
           }
         },
-        "description": "로그인 API\n\n깃헙 oauth2 인증을 통해 얻은 code를 body를 통해 제공해야 합니다.",
+        "description": "로그인 API\n\n새로운 사용자가 로그인을 진행하면 github oauth 서버에서 제공한 사용자 정보를 토대로\n사용자 계정을 생성합니다.\n\n비활성화된 사용자의 경우, 다시 활성화됩니다.",
         "x-nestia-namespace": "sign-in.github.signInGithub",
         "x-nestia-jsDocTags": [
           {
@@ -72,6 +137,41 @@
             "text": [
               {
                 "text": "authentication",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "param",
+            "text": [
+              {
+                "text": "body",
+                "kind": "parameterName"
+              },
+              {
+                "text": " ",
+                "kind": "space"
+              },
+              {
+                "text": "token 요청 권한을 가진 code를 포함한다.",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "returns",
+            "text": [
+              {
+                "text": "access_token, refresh_token, id_token을 포함한 객체를 응답",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "401 사용자 인증에 실패했습니다.",
                 "kind": "text"
               }
             ]
@@ -87,7 +187,7 @@
         "parameters": [],
         "responses": {
           "200": {
-            "description": "",
+            "description": "재발행된 access_token을 응답합니다.",
             "content": {
               "application/json": {
                 "schema": {
@@ -96,6 +196,12 @@
               }
             },
             "x-nestia-encrypted": false
+          },
+          "400": {
+            "description": "잘못된 토큰입니다."
+          },
+          "404": {
+            "description": "일치하는 대상을 찾지 못했습니다."
           }
         },
         "description": "인증 토큰 재발행 API\n\nAuthorization header로 refresh_token을 전달헤야 합니다.",
@@ -106,6 +212,33 @@
             "text": [
               {
                 "text": "authentication",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "returns",
+            "text": [
+              {
+                "text": "재발행된 access_token을 응답합니다.",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "400 잘못된 토큰입니다.",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "404 일치하는 대상을 찾지 못했습니다.",
                 "kind": "text"
               }
             ]
@@ -121,7 +254,7 @@
         "parameters": [],
         "responses": {
           "200": {
-            "description": "",
+            "description": "사용자 상세 정보 응답",
             "content": {
               "application/json": {
                 "schema": {
@@ -130,6 +263,12 @@
               }
             },
             "x-nestia-encrypted": false
+          },
+          "400": {
+            "description": "잘못된 토큰입니다."
+          },
+          "404": {
+            "description": "일치하는 대상을 찾지 못했습니다."
           }
         },
         "description": "내 프로필 보기 API",
@@ -143,6 +282,33 @@
                 "kind": "text"
               }
             ]
+          },
+          {
+            "name": "returns",
+            "text": [
+              {
+                "text": "사용자 상세 정보 응답",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "400 잘못된 토큰입니다.",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "404 일치하는 대상을 찾지 못했습니다.",
+                "kind": "text"
+              }
+            ]
           }
         ]
       },
@@ -152,7 +318,7 @@
         ],
         "parameters": [],
         "requestBody": {
-          "description": "",
+          "description": "수정할 정보를 포함합니다.",
           "content": {
             "application/json": {
               "schema": {
@@ -167,6 +333,9 @@
           "201": {
             "description": "",
             "x-nestia-encrypted": false
+          },
+          "400": {
+            "description": "잘못된 토큰입니다."
           }
         },
         "description": "내 정보 수정 API",
@@ -177,6 +346,35 @@
             "text": [
               {
                 "text": "user",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "param",
+            "text": [
+              {
+                "text": "body",
+                "kind": "parameterName"
+              },
+              {
+                "text": " ",
+                "kind": "space"
+              },
+              {
+                "text": "수정할 정보를 포함합니다.",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "returns"
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "400 잘못된 토큰입니다.",
                 "kind": "text"
               }
             ]
@@ -192,9 +390,12 @@
           "200": {
             "description": "",
             "x-nestia-encrypted": false
+          },
+          "400": {
+            "description": "잘못된 토큰입니다."
           }
         },
-        "description": "내 계정 삭제 API",
+        "description": "내 계정 비활성화 API\n\n사용자는 로그인을 통해 계정을 활성화할 수 있습니다.\n\n비활성화된 계정은 조회되지 않습니다.",
         "x-nestia-namespace": "user.inActivate",
         "x-nestia-jsDocTags": [
           {
@@ -202,6 +403,18 @@
             "text": [
               {
                 "text": "user",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "returns"
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "400 잘못된 토큰입니다.",
                 "kind": "text"
               }
             ]
@@ -228,7 +441,7 @@
         ],
         "responses": {
           "200": {
-            "description": "",
+            "description": "조회한 사용자의 공개 정보를 응답합니다.",
             "content": {
               "application/json": {
                 "schema": {
@@ -237,9 +450,15 @@
               }
             },
             "x-nestia-encrypted": false
+          },
+          "400": {
+            "description": "Value of the URL parameter \"user_id\" is not a valid UUID."
+          },
+          "404": {
+            "description": "일치하는 대상을 찾지 못했습니다."
           }
         },
-        "description": "사용자 프로필 조회 API",
+        "description": "사용자 프로필 조회 API\n\n활성화된 사용자의 정보만 조회합니다.",
         "x-nestia-namespace": "users.getPulicProfile",
         "x-nestia-jsDocTags": [
           {
@@ -250,6 +469,50 @@
                 "kind": "text"
               }
             ]
+          },
+          {
+            "name": "param",
+            "text": [
+              {
+                "text": "user_id",
+                "kind": "parameterName"
+              },
+              {
+                "text": " ",
+                "kind": "space"
+              },
+              {
+                "text": "조회 대상의 id 입니다. uuid 타입만 허용합니다.",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "returns",
+            "text": [
+              {
+                "text": "조회한 사용자의 공개 정보를 응답합니다.",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "400 Value of the URL parameter \"user_id\" is not a valid UUID.",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "throw",
+            "text": [
+              {
+                "text": "404 일치하는 대상을 찾지 못했습니다.",
+                "kind": "text"
+              }
+            ]
           }
         ]
       }
@@ -257,6 +520,21 @@
   },
   "components": {
     "schemas": {
+      "IAuthUsecase.SignInBody": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "string",
+            "nullable": false,
+            "x-typia-required": true
+          }
+        },
+        "nullable": false,
+        "required": [
+          "code"
+        ],
+        "x-typia-jsDocTags": []
+      },
       "IAuthUsecase.SignInResponse": {
         "type": "object",
         "properties": {
